sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:18: error: not found: type Booleab
def rBon(i:int):Booleab = {
                ^DutchFlagAlgo:18: error: not found: type int
def rBon(i:int):Booleab = {
           ^DutchFlagAlgo:27: error: not found: type Booleab
def bBon(i:int):Booleab = {
                ^DutchFlagAlgo:27: error: not found: type int
def bBon(i:int):Booleab = {
           ^